# A_Maze_Ing

./: .gitignore  Makefile  README.md  Ui.py  a_maze_ing.py  algoritimos  algoritmos  config.txt  maze.txt  parser.py  pyproject.toml
MazeGenerator/: Astar.py  Cell.py  Dfs.py  Errors.py  Maze.py  MazeGenerator.py  Ui.py  __init__.py  test.py
MazeGenerator/algorithms/: Astar.py  Dfs.py  __init__.py
MazeGenerator/maze/: Cell.py  Maze.py
mazegen/: Errors.py  MazeGenerator.py  __init__.py
mazegen/algorithms/: Astar.py  Dfs.py  Prim.py  __init__.py
mazegen/maze/: Cell.py  Maze.py  __init__.py
