[tool.poetry]
name = "mazegen"
version = "0.1.5"
description = ""
authors = ["Joao Souza <jvpvpsouza7@gmail.com>", "Caio Silva <jarskewow@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
